--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>spring-boot-springdoc</artifactId>
+            <version>3.1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
